samples/_failures_safe/1760960000_9c15ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44d34d36.c: In function ‘main’:
./samples/SAFE/__tmp_44d34d36.c:188:11: error: expected ‘;’ at end of input
  188 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_44d34d36.c:188:5: error: expected declaration or statement at end of input
  188 |     printf
      |     ^~~~~~
